# mtx-rd

./: CMakeLists.txt  CMakePresets.json
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: dll.h  ihandler.h  ihandler_imp.h
lib/src/: dll.cpp  export.cpp  ihandler_imp.cpp
presets/: cache.json  vs-2022-build.json  vs-2022-ci.json  vs-2022.json
